--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 	<title>Flask Application</title>
 </head>
-<body style="background: skyblue">
-<h1 style="color: darkblue">Welcome to Flask Web Application</h1>
+<body>
+<h1>Welcome to Flask Web Application</h1>
 </body>
+</html> -->
+
+<html>
+   <body>      
+      <form action = "http://localhost:5000/login" method = "post">
+         <p>Enter Name:</p>
+         <p><input type = "text" name = "nm" /></p>
+         <p><input type = "submit" value = "submit" /></p>
+      </form>      
+   </body>
 </html>
