--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Flask Application</title>
 </head>
-<body style="background: skyblue">
-<h1 style="color: darkblue">Welcome to Flask Web Application</h1>
+<body>
+<h1>Welcome to Flask Web Application</h1>
 </body>
 </html>
